# CausalGaitFM

./: .gitignore  README.md  pyproject.toml
project/: __init__.py  benchmark.py  generate_paper_tables.py  model.py  pipeline.py  requirements.txt  run_experiments.py  train.py  visualize_counterfactual.py
project/baselines/: __init__.py  backbone_shared.py  beta_vae.py  causal_vae.py  cnn_lstm.py  coral.py  dann.py  domainbed.py  erm.py  groupdro.py  irm_baseline.py  miro.py  st_gcn.py  transformer.py
project/data/: __init__.py  dataset.py  download.py  preprocess.py
project/models/: __init__.py  backbone.py  causal_gait.py  heads.py  scm.py
project/utils/: __init__.py  augment.py  disentanglement.py  losses.py  metrics.py  visualization.py
scripts/: resume_pipeline.ps1  resume_train.ps1  start_pipeline.ps1  start_train.ps1  stop_run.ps1  watch_pipeline.ps1
