[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "CausalGaitFM"
version = "0.1.0"
description = "A Causal Representation-Driven Cross-Domain Foundation Model for Clinical Gait Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "tqdm>=4.65",
    "requests>=2.28",
]

[project.optional-dependencies]
mamba = ["mamba-ssm>=2.2"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["project*"]

[tool.ruff]
line-length = 120
target-version = "py310"
